--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //gif
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.15'
+
+    //koin
+    def koin_version = "2.0.1"
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    //logging
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //lifecycle
+    def lifecycle_version = "2.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 }
